src/bambusa/parser/BambusaParser.py
# Generated from /workspace/Bambusa/Bambusa.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BambusaParser ( Parser ):

    grammarFileName = "Bambusa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fn'", "'('", "')'", "','", "'->'", "'='", 
                     "';'", "'{'", "'}'", "'return'", "'if'", "'then'", 
                     "'else'", "'for'", "'in'", "'..'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'int'", "'float'", 
                     "'bool'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BoolLiteral", "IntegerLiteral", "FloatLiteral", "Identifier", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_returnType = 4
    RULE_globalDecl = 5
    RULE_block = 6
    RULE_statement = 7
    RULE_varDecl = 8
    RULE_assignment = 9
    RULE_returnStmt = 10
    RULE_exprStmt = 11
    RULE_ifStmt = 12
    RULE_forStmt = 13
    RULE_range = 14
    RULE_expression = 15
    RULE_conditionalExpr = 16
    RULE_logicalOrExpr = 17
    RULE_logicalAndExpr = 18
    RULE_equalityExpr = 19
    RULE_relationalExpr = 20
    RULE_additiveExpr = 21
    RULE_multiplicativeExpr = 22
    RULE_unaryExpr = 23
    RULE_primaryExpr = 24
    RULE_type = 25

    ruleNames =  [ "program", "functionDecl", "paramList", "param", "returnType", 
                   "globalDecl", "block", "statement", "varDecl", "assignment", 
                   "returnStmt", "exprStmt", "ifStmt", "forStmt", "range", 
                   "expression", "conditionalExpr", "logicalOrExpr", "logicalAndExpr", 
                   "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "primaryExpr", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    BoolLiteral=36
    IntegerLiteral=37
    FloatLiteral=38
    Identifier=39
    WS=40
    COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BambusaParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(BambusaParser.FunctionDeclContext,i)


        def globalDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.GlobalDeclContext)
            else:
                return self.getTypedRuleContext(BambusaParser.GlobalDeclContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BambusaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 15032385538) != 0):
                self.state = 54
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 52
                    self.functionDecl()
                    pass
                elif token in [31, 32, 33]:
                    self.state = 53
                    self.globalDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(BambusaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def returnType(self):
            return self.getTypedRuleContext(BambusaParser.ReturnTypeContext,0)


        def block(self):
            return self.getTypedRuleContext(BambusaParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(BambusaParser.ParamListContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = BambusaParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(BambusaParser.T__0)
            self.state = 62
            self.match(BambusaParser.Identifier)
            self.state = 63
            self.match(BambusaParser.T__1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 15032385536) != 0):
                self.state = 64
                self.paramList()


            self.state = 67
            self.match(BambusaParser.T__2)
            self.state = 68
            self.returnType()
            self.state = 69
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.ParamContext)
            else:
                return self.getTypedRuleContext(BambusaParser.ParamContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = BambusaParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.param()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 72
                self.match(BambusaParser.T__3)
                self.state = 73
                self.param()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BambusaParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def getRuleIndex(self):
            return BambusaParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = BambusaParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.type_(0)
            self.state = 80
            self.match(BambusaParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BambusaParser.TypeContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)




    def returnType(self):

        localctx = BambusaParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnType)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(BambusaParser.T__4)
                self.state = 83
                self.type_(0)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BambusaParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_globalDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDecl" ):
                listener.enterGlobalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDecl" ):
                listener.exitGlobalDecl(self)




    def globalDecl(self):

        localctx = BambusaParser.GlobalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_globalDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.type_(0)
            self.state = 88
            self.match(BambusaParser.Identifier)
            self.state = 89
            self.match(BambusaParser.T__5)
            self.state = 90
            self.expression()
            self.state = 91
            self.match(BambusaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.StatementContext)
            else:
                return self.getTypedRuleContext(BambusaParser.StatementContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = BambusaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(BambusaParser.T__7)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1046965406724) != 0):
                self.state = 94
                self.statement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(BambusaParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(BambusaParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BambusaParser.AssignmentContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(BambusaParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(BambusaParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(BambusaParser.ReturnStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(BambusaParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = BambusaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.varDecl()
                self.state = 103
                self.match(BambusaParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.assignment()
                self.state = 106
                self.match(BambusaParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.returnStmt()
                self.state = 111
                self.match(BambusaParser.T__6)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.exprStmt()
                self.state = 114
                self.match(BambusaParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BambusaParser.TypeContext,0)


        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = BambusaParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.type_(0)
            self.state = 119
            self.match(BambusaParser.Identifier)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 120
                self.match(BambusaParser.T__5)
                self.state = 121
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = BambusaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BambusaParser.Identifier)
            self.state = 125
            self.match(BambusaParser.T__5)
            self.state = 126
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = BambusaParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BambusaParser.T__9)
            self.state = 129
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)




    def exprStmt(self):

        localctx = BambusaParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BambusaParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.BlockContext)
            else:
                return self.getTypedRuleContext(BambusaParser.BlockContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = BambusaParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BambusaParser.T__10)
            self.state = 134
            self.expression()
            self.state = 135
            self.match(BambusaParser.T__11)
            self.state = 136
            self.block()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 137
                self.match(BambusaParser.T__12)
                self.state = 138
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BambusaParser.Identifier, 0)

        def range_(self):
            return self.getTypedRuleContext(BambusaParser.RangeContext,0)


        def block(self):
            return self.getTypedRuleContext(BambusaParser.BlockContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = BambusaParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(BambusaParser.T__13)
            self.state = 142
            self.match(BambusaParser.Identifier)
            self.state = 143
            self.match(BambusaParser.T__14)
            self.state = 144
            self.range_()
            self.state = 145
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BambusaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = BambusaParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.expression()
            self.state = 148
            self.match(BambusaParser.T__15)
            self.state = 149
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionalExpr(self):
            return self.getTypedRuleContext(BambusaParser.ConditionalExprContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = BambusaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.conditionalExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BambusaParser.ExpressionContext,i)


        def logicalOrExpr(self):
            return self.getTypedRuleContext(BambusaParser.LogicalOrExprContext,0)


        def getRuleIndex(self):
            return BambusaParser.RULE_conditionalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalExpr" ):
                listener.enterConditionalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalExpr" ):
                listener.exitConditionalExpr(self)




    def conditionalExpr(self):

        localctx = BambusaParser.ConditionalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_conditionalExpr)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(BambusaParser.T__10)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(BambusaParser.T__11)
                self.state = 156
                self.expression()
                self.state = 157
                self.match(BambusaParser.T__12)
                self.state = 158
                self.expression()
                pass
            elif token in [2, 26, 30, 36, 37, 38, 39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.logicalOrExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BambusaParser.LogicalAndExprContext)
            else:
                return self.getTypedRuleContext(BambusaParser.LogicalAndExprContext,i)


        def getRuleIndex(self):
            return BambusaParser.RULE_logicalOrExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpr" ):
                listener.enterLogicalOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpr" ):
                listener.exitLogicalOrExpr(self)




    def logicalOrExpr(self):

        localctx = BambusaParser.LogicalOrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_logicalOrExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.logicalAndExpr()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 164
                self.match(BambusaParser.T__16)
                self.state = 165
                self.logicalAndExpr()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExprContext(ParserRuleContext):
        __slots__ = 'parser'
